# data_types

./: CMakeLists.txt  LICENSE  Makefile  Makefile.clang  Makefile.clang.avx  Makefile.clang.avx2  Makefile.clang.avx512  Makefile.gnu.avx  Makefile.gnu.avx2  Makefile.gnu.avx512  Makefile.nvcc  Makefile.sycl  README.md  benchmark.sh  build_clang.sh  collect_perf_data.sh  run_clang.sh
include/auxiliary/: CPPStandard.hpp  Doxyfile  Macro.hpp  Template.hpp  math.hpp  variadic.hpp
include/buffer/: buffer.hpp  buffer_constants.hpp  buffer_fdecl.hpp  buffer_math.hpp  buffer_proxy_vec.hpp  buffer_vec.hpp
include/common/: DataLayout.hpp  Doxyfile  Math.hpp  Memory.hpp  Traits.hpp  data_layout.hpp  data_types.hpp  memory.hpp  traits.hpp
include/data_types/: DataTypes.hpp
include/field/: Doxyfile  field.hpp
include/misc/: misc.hpp  misc_math.hpp  misc_memory.hpp  misc_variadic.hpp  template_stuff.hpp
include/platform/: Target.hpp  target.hpp
include/sarray/: Doxyfile  sarray.hpp
include/simd/: simd.hpp  simd_platform.hpp
include/static_array/: Doxyfile  sarray.hpp
include/traits/: traits.hpp
include/tuple/: Doxyfile  tuple.hpp  tuple_math.hpp  tuple_proxy.hpp
include/vec/: Doxyfile  vec.hpp  (+3 more)
src/: CMakeLists.txt  benchmark.cpp  benchmark_buffer.cpp  benchmark_buffer_gpu.cu  benchmark_implementation.cpp  benchmark_implementation_original.cpp  kernel.cpp  test_buffer.cpp  test_vec.cpp
src/unit_test/field/: CMakeLists.txt  TestField.cpp  TestFieldCUDA.cpp  TestFieldCUDA.cu
src/unit_test/tuple/: CMakeLists.txt  TestRecord.cpp  TestTuple.cpp  TestTupleProxy.cpp
(+39 files in other folders)
